.shopnow width & alignment fixed

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -34,7 +34,7 @@ body {
 }
 
 .button {
-    background-color: #4CAF50; /* Green */
+    /* Green */
     border: none;
     color: white;
     padding: 16px 32px;
@@ -537,7 +537,8 @@ table.centered {
     margin-right:auto;
 	border-collapse: separate;
 	border-spacing: 20%;
-	
+	align-items: center;
+  	justify-content: center;
 }
 
 .rotateClick {
@@ -574,6 +575,10 @@ table.centered {
 	background-color:transparent;
 	border: red solid 3px;
 	color: red;
+	margin: 0 auto;
+    width: 100%;
+	text-align: center;
+	padding: 15px 15px;
 }
 
 .shopnow:hover {
